--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                                             <div class="carousel-item active">
                                 
                                                 <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
-                                                    <div class="col-lg-7">
+                                                    <div class="col-lg-7 col-md-7 col-12">
                                                         <h1>Cool Dude Headphone</h1>
                                                         <p>
                                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi architecto accusamus
@@ -57,15 +57,15 @@
                                                         <h1>$490</h1>
                                                         <button class="btn btn-warning">Buy Now</button>
                                                     </div>
-                                                    <div class="col-lg-5">
-                                                        <img src="./images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                                                    <div class="col-lg-5 col-md-5 col-12">
+                                                        <img src="./images/banner-images/headphone.png" class="d-block w-100 img-fluid p-4" alt="...">
                                                     </div>
                                                 </div>
                                 
                                             </div>
                                             <div class="carousel-item">
                                                 <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
-                                                    <div class="col-lg-7">
+                                                    <div class="col-lg-7 col-md-7 col-12">
                                                         <h1>Mega LCD TV For Sports</h1>
                                                         <p>
                                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi architecto accusamus
@@ -75,14 +75,14 @@
                                                         <h1>$1399</h1>
                                                         <button class="btn btn-warning">Buy Now</button>
                                                     </div>
-                                                    <div class="col-lg-5">
-                                                        <img src="./images/banner-images/tv.png" class="d-block w-100" alt="...">
+                                                    <div class="col-lg-5 col-md-5 col-12">
+                                                        <img src="./images/banner-images/tv.png" class="d-block w-100 img-fluid p-4" alt="...">
                                                     </div>
                                                 </div>
                                             </div>
                                             <div class="carousel-item">
                                                 <div class="row p-5 bg-info bg-gradient d-flex align-items-center">
-                                                    <div class="col-lg-7">
+                                                    <div class="col-lg-7 col-md-7 col-12">
                                                         <h1>X-Box for your living room</h1>
                                                         <p>
                                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi architecto accusamus
@@ -92,8 +92,8 @@
                                                         <h1>$699</h1>
                                                         <button class="btn btn-warning">Buy Now</button>
                                                     </div>
-                                                    <div class="col-lg-5">
-                                                        <img src="./images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                                                    <div class="col-lg-5 col-md-5 col-12">
+                                                        <img src="./images/banner-images/xbox.png" class="d-block w-100 img-fluid p-4" alt="...">
                                                     </div>
                                                 </div>
                                             </div>
